# locker

./: .gitignore  .travis.yml  Cargo.toml  README.md
migrations/2018-10-23-222039_create_channels/: down.sql  up.sql
migrations/2018-10-23-222047_create_messages/: up.sql
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/database/: channels.rs  messages.rs  mod.rs  models.rs  schema.rs
src/sockets/: channels.rs  messages.rs  mod.rs  register.rs  router.rs
utils/: start_local_db.sh  test.sh
