[package]
name = "server"
version = "0.1.0"
authors = ["Sam Jeston <sam.jeston@gmail.com>"]

[dependencies]
ws = "0.7.9"
env_logger = "0.5.13"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
serde_json = "1.0"
serde = "1.0.80"
serde_derive = "1.0.80"
chrono = "0.4.6"
